# appbeholder

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy-agent.sh  deploy.sh  instruction..md
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_create_projects.sql  002_create_hosts.sql  003_create_log_entries.sql  004_create_spans.sql  005_create_metrics.sql  006_create_error_groups.sql
crates/server/src/: auth.rs  config.rs  main.rs
crates/server/src/api/: errors.rs  logs.rs  mod.rs  otlp_logs.rs  otlp_metrics.rs  otlp_traces.rs  otlp_types.rs
crates/server/src/db/: errors.rs  logs.rs  metrics.rs  migrations.rs  mod.rs  projects.rs  spans.rs
crates/server/src/sse/: channels.rs
crates/server/src/web/: mod.rs
crates/server/templates/: errors.html  hosts.html  layout.html  login.html  logs.html  metrics.html  placeholder.html  projects.html  trace_detail.html  traces.html
docs/plans/: 2026-03-18-beholder-host-agent-design.md  2026-03-18-metrics-dashboard-design.md
